--- a/Manuscript/Manuscript.tex
+++ b/Manuscript/Manuscript.tex
@@ -98,21 +98,23 @@ Yves Godd\'eris\textsuperscript{3}
 
 \linenumbers
 
-Indonesia and New Guinea (I\&NG) have an outsized contribution to modern chemical weathering fluxes. The confluence of steep topography, a warm and wet tropical climate, and the presence of mafic lithologies results in high fluxes of Ca and Mg cations and associated \COtwo consumption \cite{Gaillardet1999a, Hartmann2009a, Milliman2013a, Hartmann2014a}. There has been a significant increase of subaerially-exposed land area within the region since the Miocene associated with ongoing arc-continent collision between Australia and the Sunda-Banda arc system \cite{Molnar2015a, Hall2017a, Macdonald2019a}. Concurrently, after the Miocene Climatic Optimum, a cooling trend began ca. 15~Ma and accelerated over the past 4 million years (m.y.) culminating with the onset of Northern Hemisphere glaciation \cite{Shackleton1984a, Zachos2001a}. Many hypotheses have been proposed to explain this cooling trend including changes in ocean/atmosphere circulation \cite{Haug1998a, Shevenell2004a, Molnar2015a}, a decrease in volcanic outgassing \cite{Berner1983a}, or uplift in the Himalaya \cite{Raymo1988a}. Here we use geologic data to reconstruct the shorelines of I\&NG over the past 20~m.y. (Fig. \ref{fig:shoreline_growth}) and quantify the increase in land area in the tropics. We use these paleoshorelines as boundary conditions within a coupled weathering-climate model to quantify the change in steady-state \pCOtwo associated with this emergence (Fig. \ref{fig:scenario_pCO2}). We find that the decrease in \pCOtwo due to these paleogeographic changes is sufficient to explain long-term climatic cooling over the Neogene.
+Indonesia and New Guinea (I\&NG) have an outsized contribution to modern chemical weathering fluxes. The confluence of steep topography, a warm and wet tropical climate, and the presence of mafic lithologies results in high fluxes of Ca and Mg cations and associated \COtwo consumption \cite{Gaillardet1999a, Hartmann2009a, Milliman2013a, Hartmann2014a}. There has been a significant increase of subaerially-exposed land area within the region since the Miocene associated with ongoing arc-continent collision between Australia and the Sunda-Banda arc system \cite{Molnar2015a, Hall2017a, Macdonald2019a}. Concurrently, after the Miocene Climatic Optimum, a cooling trend began ca. 15~Ma and accelerated over the past 4 million years (m.y.) culminating with the onset of Northern Hemisphere glaciation \cite{Shackleton1984a, Zachos2001a}. Many hypotheses have been proposed to explain this cooling trend including changes in ocean/atmosphere circulation \cite{Haug1998a, Shevenell2004a, Molnar2015a}, a decrease in volcanic outgassing \cite{Berner1983a}, or uplift in the Himalaya \cite{Raymo1988a}. Here we use geologic data to reconstruct the shorelines of I\&NG over the past 15~m.y. (Fig. \ref{fig:shoreline_growth}) and quantify the increase in land area in the tropics. We use these paleoshorelines as boundary conditions within a coupled weathering-climate model to quantify the change in steady-state \pCOtwo associated with this emergence (Fig. \ref{fig:scenario_pCO2}). We find that the decrease in \pCOtwo due to these paleogeographic changes is sufficient to explain long-term climatic cooling over the Neogene.
 
-Over geologic time-scales, \COtwo enters Earth's ocean/atmosphere system primarily via volcanism and metamorphic degassing, and leaves primarily through the chemical weathering of silicate rocks, which delivers alkalinity and cations to the ocean that sequesters carbon via the precipitation of carbonate sediment, with a smaller sink through organic carbon burial \cite{Kump2000a}. Steady-state \pCOtwo is set by the \pCOtwo level at which \COtwo sinks are equal to sources. As \COtwo sinks are removed and \pCOtwo rises, temperature increases and the hydrological cycle is invigorated, causing other weathering sinks to increase until a new steady-state is achieved at higher \pCOtwo. Conversely, the magnitude of the silicate weathering \COtwo sink can be equal to the magnitude of the source at lower \pCOtwo when global weatherability is high \cite{Kump1997a}.
+Over geologic time-scales, \COtwo enters Earth's ocean/atmosphere system primarily via volcanism and metamorphic degassing, and leaves primarily through the chemical weathering of silicate rocks, which delivers alkalinity and cations to the ocean that sequester carbon via the precipitation of carbonate sediment, with a smaller sink through organic carbon burial \cite{Kump2000a}. Steady-state \pCOtwo is set at the \pCOtwo level at which \COtwo sinks are equal to sources. As \COtwo sinks are removed and \pCOtwo rises, temperature increases and the hydrological cycle is invigorated, causing other weathering sinks to increase until a new steady-state is achieved at higher \pCOtwo. Conversely, the magnitude of the \COtwo sink can be equal to the magnitude of the source at lower \pCOtwo when global weatherability is high \cite{Kump1997a}.
 
-Topography, climate, and lithology all modulate chemical weathering. In low-relief regions, low erosion rates lead to supply-limited weathering regimes, in contrast to regions of high denudation \cite{Gabet2009a, West2012a, Maher2014a}. In warm and wet regions, mineral dissolution kinetics are faster leading to enhanced chemical weathering \cite{Lasaga1994a, West2012a}. Regions with high physical weathering rates that are not supply-limited are more sensitive to changes in climate that can reduce or enhance chemical weathering \cite{West2012a, Maher2014a}. In terms of lithology, mafic rocks have the potential to sequester more carbon through silicate weathering because of their relatively high Ca and Mg concentrations \cite{Dessert2003a}. These factors have lead to the proposal that arc-continent collisions within the tropical rain belt have been important in enhancing global weatherability, lowering atmospheric \pCOtwo and initiating glacial climate over the past 520~m.y. \cite{Jagoutz2016a, Swanson-Hysell2017a, Macdonald2019a} and perhaps in the Neoproterozoic as well \cite{Park2019a}.
+Topography, climate, and lithology all modulate chemical weathering. In contrast to regions of high denudation, in low-relief regions low erosion rates lead to supply-limited weathering regimes \cite{Gabet2009a, West2012a, Maher2014a}. In warm and wet regions, mineral dissolution kinetics are faster leading to enhanced chemical weathering \cite{Lasaga1994a, West2012a}. Regions with high physical weathering rates that are not supply-limited are more sensitive to changes in climate that can reduce or enhance chemical weathering \cite{West2012a, Maher2014a}. In terms of lithology, mafic rocks have the potential to sequester more carbon through silicate weathering because of their relatively high Ca and Mg concentrations \cite{Dessert2003a}. These factors have lead to the proposal that arc-continent collisions within the tropical rain belt have been important in enhancing global weatherability, lowering atmospheric \pCOtwo, and initiating glacial climate over the past 520~m.y. \cite{Jagoutz2016a, Swanson-Hysell2017a, Macdonald2019a} and perhaps in the Neoproterozoic as well \cite{Park2019a}.
 
-To estimate the decrease in steady-state \pCOtwo associated with the increase of subaerially-exposed land area in I\&NG and enhanced global weatherability, we use the spatially-resolved GEOCLIM model \cite{Godderis2014a, Godderis2017c}. GEOCLIM consists of a silicate weathering model linked to climate model runs at variable \pCOtwo, allowing for estimates of \pCOtwo associated with coupled changes in weathering sinks and climatology. Within the silicate weathering component of GEOCLIM, we implement a regolith development model \cite{Gabet2009a} that integrates a climatic dependence on chemical weathering \cite{West2012a}.
+To estimate the decrease in steady-state \pCOtwo associated with the increase of subaerially-exposed land area in I\&NG and enhanced global weatherability, we use the spatially-resolved GEOCLIM model \cite{Godderis2014a, Godderis2017c}. GEOCLIM consists of a silicate weathering model linked to climate model runs at different \pCOtwo levels, allowing for estimates of \pCOtwo associated with coupled changes in weathering sinks and climatology.
 
-The silicate weathering component of GEOCLIM calculates \COtwo consumption resulting from silicate weathering for each continental grid cell. In previous versions of the model, silicate weathering was a function of temperature and runoff only, and bedrock in all continental grid cells had identical chemical compositions \cite{Godderis2014a}. More recent versions of GEOCLIM implement regolith development and soil shielding into the silicate weathering component, which introduces a dependence on topographic slope (see SI). While this introduction of regolith development into GEOCLIM is important for assessing the impact of tropical arc-continent collisions on \pCOtwo, the relatively high Ca+Mg concentration in arc rocks relative to other lithologies must also be considered. We therefore implement variable bedrock Ca+Mg concentration into GEOCLIM. The spatial distribution of lithologies is sourced from the global lithologic map (GLiM) \cite{Hartmann2012a} and represented by 6 categories: metamorphic, felsic, intermediate, mafic, carbonate, and siliciclastic sediment (see SI). Each continental grid cell is assigned these lithologic categories at a resolution of 0.1\degrees $\times$ 0.1\degrees. The Ca+Mg concentrations of felsic, intermediate, and mafic lithologies are assigned based on the mean of data compiled from EarthChem (\url{www.earthchem.org/portal}). Given that GLiM does not distinguish ultramafic lithologies, such rocks are grouped with mafic rocks. As a result, the Ca+Mg concentration is likely an underestimate in regions of obducted ophiolites, such that the estimated effect of these regions on changing steady-state \pCOtwo is conservative. The weathering of carbonate does not contribute to long-term \COtwo consumption and its Ca+Mg concentration is ignored. The Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells are more difficult to define, since their chemical composition is strongly dependent on protolith composition and, in the case of siliciclastic sediment, the degree of previous chemical depletion. We explore a range of feasible Ca+Mg concentrations of metamorphic and siliciclastic sediment lithologies during calibration of the silicate weathering component of GEOCLIM. The values of four parameters within the silicate weathering component of GEOCLIM \cite{Gabet2009a, West2012a, Maffre2018a} that modify the dependence of silicate weathering on temperature, runoff, and particle age are poorly constrained (see SI). Rather than prescribing values for these parameters, we allow them and metamorphic and siliciclastic Ca+Mg concentrations to vary within reasonable bounds, resulting in 78,000 unique combinations. For each combination, we compute spatially-resolved long-term \COtwo consumption associated with Ca+Mg fluxes using present-day runoff, temperature, and slope. We sum computed \COtwo consumption over watersheds for which data-constrained estimates are available \cite{Gaillardet1999a, Moquet2018a}, then calculate the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of these watersheds. After eliminating parameter combinations that result in low $r^{2}$, 3,339 parameter combinations remain. The resulting global \COtwo consumption of these model runs all overlap with independently-derived estimates of global \COtwo outgassing flux \cite{Gerlach2011a} as they should with the long-term carbon cycle being at steady-state (see SI).
+The silicate weathering component of GEOCLIM calculates \COtwo consumption resulting from silicate weathering for each continental grid cell. In previous versions of the model, silicate weathering was a function of temperature and runoff only, and bedrock in all continental grid cells had identical chemical compositions \cite{Godderis2014a}. More recent versions of GEOCLIM implement regolith development and soil shielding into the silicate weathering component, which introduces a dependence on topographic slope (see SI) \cite{Gabet2009a, West2012a}. While this introduction of regolith development into GEOCLIM is important for assessing the impact of tropical arc-continent collisions on \pCOtwo, the relatively high Ca+Mg concentration in arc rocks relative to other lithologies must also be considered. We therefore implement variable bedrock Ca+Mg concentration into GEOCLIM. The spatial distribution of lithologies is sourced from the Global Lithologic Map (GLiM) \cite{Hartmann2012a} and is represented by 6 categories: metamorphic, felsic, intermediate, mafic, carbonate, and siliciclastic sediment (see SI). Each continental grid cell is assigned these lithologic categories at a resolution of 0.1\degrees $\times$ 0.1\degrees. The Ca+Mg concentrations of felsic, intermediate, and mafic lithologies are assigned based on the mean of data compiled from EarthChem (\url{www.earthchem.org/portal}). Given that GLiM does not distinguish ultramafic lithologies, such rocks are grouped with mafic rocks. As a result, the Ca+Mg concentration is likely an underestimate in regions of obducted ophiolites, such that the estimated effect of these regions on changing steady-state \pCOtwo is conservative. The weathering of carbonate does not contribute to long-term \COtwo consumption and its Ca+Mg concentration is ignored. The Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells are more difficult to define, since their chemical composition is strongly dependent on protolith composition and, in the case of siliciclastic sediment, the degree of previous chemical depletion. We explore a range of feasible Ca+Mg concentrations of metamorphic and siliciclastic sediment lithologies during calibration of the silicate weathering component.
 
-Having calibrated the silicate weathering component of GEOCLIM, we use it to estimate the decrease in steady-state \pCOtwo associated with the emergence of I\&NG. For the climate model component, we use temperature and runoff from a subset of the GFDL CM2.0 experiments \cite{Delworth2006a, Delworth2006b} (see SI). The primary strength of these experiments for this analysis is that all non-\COtwo forcings are held constant at values representative of pre-industrial conditions, allowing the effect of \pCOtwo to be isolated. We use terrestrial and marine sedimentary deposits to determine the position of paleoshorelines of I\&NG over the past 15~m.y. and include changes in areas of submerged continental shelves such as the Sunda Shelf that were previously exposed (Fig. \ref{fig:shoreline_growth}; see SI). In New Guinea, emergence in the Middle Miocene is associated with collision between the Melanesian Arc and Australia's distal margin \cite{vanUfford2005a, Cloos2005a, Baldwin2012a}, which drove exhumation of the 1440~km long Irian-Marum-April Ophiolite Belt. Exhumation of the New Guinea Central Range accelerated over the past 4~m.y. associated with slab-breakoff and buoyant uplift \cite{Cloos2005a} while in eastern New Guinea, progressive jamming of the north-dipping subduction zone also caused major uplift over this time interval \cite{vanUfford2005a}. These tectonic drivers lead to progressive emergence over the past 15~m.y. that accelerated following 5~Ma (Fig. \ref{fig:shoreline_growth}B). This trend mirrors broad cooling over the Neogene that resulted in the initiation of Northern Hemisphere ice sheets (Fig. \ref{fig:shoreline_growth}C).
+The values of four parameters within the silicate weathering component \cite{Gabet2009a, West2012a, Maffre2018a} that modify the dependence of silicate weathering on temperature, runoff, and particle age are poorly constrained (see SI). Rather than prescribing values for these parameters, we allow them and metamorphic and siliciclastic Ca+Mg concentrations to vary within reasonable bounds, resulting in 78,000 unique combinations. For each combination, we compute spatially-resolved long-term \COtwo consumption associated with Ca+Mg fluxes using present-day runoff, temperature, and slope. We sum computed \COtwo consumption over watersheds for which data-constrained estimates are available \cite{Gaillardet1999a, Moquet2018a}, then calculate the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of these watersheds. After eliminating parameter combinations that result in low $r^{2}$, 3,339 parameter combinations remain. The resulting global \COtwo consumption of these model runs all overlap with independently-derived estimates of global \COtwo outgassing flux \cite{Gerlach2011a} as they should with the long-term carbon cycle being at steady-state (see SI).
 
-To explore the sensitivity of global weatherability and climate state to the emergence of I\&NG, we force GEOCLIM using our best estimates of the subaerial extent of islands in the area at ca. 15, 10, and 5~Ma (``reduced I\&NG + Sunda Shelf'' scenarios; Fig. \ref{fig:scenario_pCO2}). Given that the Sunda Shelf is presently submerged, across the shelf we distribute felsic and siliciclastic lithologies and assign shallow slope values in a manner that is consistent with existing observations (see SI). While we modify the land area, the position of the tectonic blocks remain fixed since we use a climate model forced with modern geography. While there has been motion of these tectonic blocks since 15~Ma, it has been relatively minimal, and this fixed scenario is a good approximation of the paleogeography. We also test an end member scenario, in which all islands associated with arc-continent collision in the region are removed (``removed I\&NG'' scenario; Fig. \ref{fig:scenario_pCO2}).
+Having calibrated the silicate weathering component of GEOCLIM, we use it to estimate the decrease in steady-state \pCOtwo associated with the emergence of I\&NG. For the climate model component, we use temperature and runoff from a subset of the GFDL CM2.0 experiments \cite{Delworth2006a, Delworth2006b} (see SI). The primary strength of these experiments for this analysis is that all non-\COtwo forcings are held constant at values representative of pre-industrial conditions, allowing the effect of \pCOtwo to be isolated. We use terrestrial and marine sedimentary deposits to determine the position of paleoshorelines of I\&NG over the past 15~m.y. and include changes in areas of presently-submerged continental shelves such as the Sunda Shelf that were previously exposed (Fig. \ref{fig:shoreline_growth}; see SI). In New Guinea, emergence in the Middle Miocene is associated with collision between the Melanesian Arc and Australia's distal margin \cite{vanUfford2005a, Cloos2005a, Baldwin2012a}, which drove exhumation of the 1440~km long Irian-Marum-April Ophiolite Belt. Exhumation of the New Guinea Central Range accelerated over the past 4~m.y. associated with slab-breakoff and buoyant uplift \cite{Cloos2005a} while in eastern New Guinea, progressive jamming of the north-dipping subduction zone also caused major uplift over this time interval \cite{vanUfford2005a}. These tectonic drivers lead to progressive emergence over the past 15~m.y. that accelerated following 5~Ma (Fig. \ref{fig:shoreline_growth}B). This trend mirrors broad cooling over the Neogene that resulted in the initiation of Northern Hemisphere ice sheets (Fig. \ref{fig:shoreline_growth}C).
 
-Using the 3,339 unique parameter combinations, the ``removed I\&NG'' scenario resulted in steady-state \pCOtwo values of 598--729~ppm (5--95 percentile), and the ``reduced I\&NG + Sunda Shelf'' scenarios resulted in 533--611~ppm, 466--502~ppm, and 394--412~ppm \pCOtwo for 15, 10, and 5~Ma respectively (Fig. \ref{fig:scenario_pCO2}). These results indicate progressive cooling over the Neogene associated with the emergence of I\&NG, and suggest that without it, pre-industrial \pCOtwo would have been $\sim$533--611~ppm. Estimates of the magnitude and trajectory of \pCOtwo change from the Miocene to the Pliocene are variable between proxy records and associated assumptions underlying their interpretation \cite{Foster2017a, Mejia2017a, Ji2018a}. These modeled \pCOtwo values for 15~Ma resemble the higher end of proxy-based \pCOtwo estimates for the early-mid-Miocene (see SI), indicating that the increase in subaerially-exposed land area and tectonic topography of I\&NG is sufficient to explain long-term cooling of Earth's climate over the Neogene. The \pCOtwo threshold for Antarctic glaciation is estimated to be $\sim$750~ppm with that for Northern Hemisphere glaciation being significantly lower at $\sim$280~ppm \cite{DeConto2008a}. These modeled values are therefore consistent with Miocene ice sheets on Antarctica followed by Northern Hemisphere ice sheets developing in the Pliocene as \pCOtwo subsequently decreased.
+We force GEOCLIM using our best estimates of the subaerial extent of islands in the area at ca. 15, 10, and 5~Ma (``reduced I\&NG + Sunda Shelf'' scenarios; Fig. \ref{fig:scenario_pCO2}). Given that the Sunda Shelf is presently submerged, across the shelf we distribute felsic and siliciclastic lithologies and assign shallow slope values in a manner that is consistent with existing observations (see SI). While we modify the land area, the position of the tectonic blocks remain fixed since we use a climate model forced with modern geography. While there has been motion of these tectonic blocks since 15~Ma, it has been relatively minimal, and this fixed scenario is a good approximation of the paleogeography (see SI). We also test an end-member scenario, in which all islands associated with arc-continent collision in the region are removed (``removed I\&NG'' scenario; Fig. \ref{fig:scenario_pCO2}).
+
+Using the 3,339 unique parameter combinations, the ``removed I\&NG'' scenario resulted in steady-state \pCOtwo values of 598--729~ppm (5--95 percentile), and the ``reduced I\&NG + Sunda Shelf'' scenarios resulted in 533--611~ppm, 466--502~ppm, and 394--412~ppm \pCOtwo for 15, 10, and 5~Ma respectively (Fig. \ref{fig:scenario_pCO2}). These results indicate progressive cooling over the Neogene associated with the emergence of I\&NG, and suggest that without it, pre-industrial \pCOtwo would have been $\sim$533--611~ppm. Proxy-based estimates of the magnitude and trajectory of \pCOtwo change from the Miocene to the Pliocene are variable between techniques and associated assumptions underlying their interpretation \cite{Foster2017a, Mejia2017a, Ji2018a}. The modeled \pCOtwo values for 15~Ma resemble the higher end of proxy-based \pCOtwo estimates for the early-mid-Miocene (see SI), indicating that the increase in subaerially-exposed land area and tectonic topography of I\&NG is sufficient to explain long-term cooling of Earth's climate over the Neogene. The \pCOtwo threshold for Antarctic glaciation is estimated to be $\sim$750~ppm with that for Northern Hemisphere glaciation being significantly lower at $\sim$280~ppm \cite{DeConto2008a}. These modeled values are therefore consistent with Miocene ice sheets on Antarctica followed by Northern Hemisphere ice sheets developing in the Pliocene as \pCOtwo subsequently decreased.
 
 The results of our I\&NG scenarios highlight the importance of the combination of topography, runoff, and lithology in setting Earth’s climate state. To independently explore the effect of the modern-day surface exposure of lower-slope basaltic lavas on steady-state \pCOtwo \cite{Kent2008a, Kent2013a}, we replace mafic volcanics associated with the Deccan and Ethiopian Traps with the Ca+Mg concentration of bulk continental crust in GEOCLIM (Fig. \ref{fig:scenario_pCO2}). The resulting \pCOtwo is $<$500~ppm, indicating that, while the presence of mafic rocks in these igneous provinces modulates steady-state \pCOtwo, its contribution is less than that of the wetter and higher-relief I\&NG.
 
@@ -136,7 +138,7 @@ We thank Alec Brenner, Sam Lo Bianco, Mariana Lin, and Judy Pu for their data co
 \begin{figure}[h!]
     \centering
     \includegraphics[width=0.9\textwidth]{Figures/shoreline_growth.pdf}
-    \caption{The emergence of Indonesia and New Guinea (I\&NG) from the mid-Miocene to present in the region referred to in climate science literature as the Maritime Continent. Past shorelines are shown in A with associated area estimates summarized in B (where I\&NG refers to the sum of all the subdivided regions). A significant increase in area over the past 5 million years is coincident with cooling and the onset of Northern Hemisphere glaciation as reflected in the benthic oxygen isotope record \cite{Zachos2008a} in C.}
+    \caption{The emergence of Indonesia and New Guinea (I\&NG) from the mid-Miocene to present in the region referred to in climate science literature as the Maritime Continent. Past shorelines are shown in A with associated area estimates summarized in B (where I\&NG refers to the sum of all the subdivided regions). A significant increase in area over the past 5 million years is coincident with cooling and the onset of Northern Hemisphere glaciation as reflected in the benthic oxygen isotope record \cite{Zachos2008a} shown in C.}
     \label{fig:shoreline_growth}
 \end{figure}
 
