--- a/Manuscript/Supplementary_Information/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information/Supplementary_Information.tex
@@ -161,7 +161,7 @@ Our implementation of the erosion rate follows one of the approaches taken in \c
 \end{equation}
 
 \noindent
-$k_{e}$ is a proportionality constant ((m/yr)$^{1-m}$) and $m$ and $n$ are adjustable exponents that are kept as 0.5 and 1 as in \citet{Maffre2018a}. This formulation is close to the large-scale BQART model of \citet{Syvitski2007a}, but without a temperature dependence and the replacement of elevation with slope, resulting in functional form that more closely resembles the stream power law \citep{Davy2000a}. This formulation and these exponent values are supported by various compilations (e.g. \citealp{Lague2013a}) although \citet{Lague2013a} also suggests that there is variability in the proportionality constant that is difficult to capture at a global scale.
+$k_{e}$ is a proportionality constant ((m/yr)$^{1-m}$) and $m$ and $n$ are adjustable exponents that are kept as 0.5 and 1 as in \citet{Maffre2018a}. This formulation is close to the large-scale BQART model of \citet{Syvitski2007a}, but with the replacement of elevation with slope and without a temperature dependence, resulting in a functional form that more closely resembles the stream power law \citep{Davy2000a}. This formulation and these exponent values are supported by various compilations (e.g. \citealp{Lague2013a}) although \citet{Lague2013a} also suggests that there is variability in the proportionality constant that is difficult to capture at a global scale.
 
 The $K$ in the dissolution rate constant in Equation \ref{eq:2} describes the dependence of the chemical weathering on climate:
 
@@ -232,7 +232,9 @@ $x(z)$ is the abundance profile of primary phases inside the regolith, varying w
 
 We restricted the calculation of the weathering fluxes to the flux of dissolved Ca+Mg originating from continental silicate weathering, as they are the sole contributors to the long-term consumption of atmospheric \COtwo. To calculate this flux, we need to assign the concentration of Ca and Mg ($\chi_{CaMg}$) within the unweathered bedrock (Fig. \ref{fig:regolith_schematic}). Previous implementations of GEOCLIM have used bulk continental crust values across all exposed land, using the concept of ``diffuse lithology'' (it was assumed that the weathering rates of all rocks was the same for each continental grid element, provided that the grid element was submitted to the same climatic conditions). Given that the hypothesis we seek to test involves the varying concentration of cations in different lithologies, the diffuse lithology cannot be used anymore, and instead we have implemented a more realistic lithologically-resolved version of the model.
 
-The spatial distribution of lithologies is sourced from the global lithologic map (GLiM) of \citet{Hartmann2012a}. The raw data takes the form of polygon vectors, where each polygon is assigned one of 16 lithologic categories. We first group these 16 categories into 6 broader categories (metamorphic, felsic, intermediate, mafic, carbonate, and siliciclastic sediment; Table \ref{tab:GLiM_to_GEOCLIM}). We then rasterize the polygon vectors to 0.1\degrees $\times$ 0.1\degrees resolution, where each pixel is assigned the lithologic category of the polygon that covers the greatest area in that pixel (i.e. the `mode lithology'; Fig. \ref{fig:world_lithology}). To improve the computing time of GEOCLIM, we decrease the resolution of the raster to 0.5\degrees $\times$ 0.5\degrees. To do so, a 3-dimensional 720 $\times$ 360 $\times$ 7 matrix is created, in which the fraction of each 0.5\degrees $\times$ 0.5\degrees pixel covered by each of the 6 lithologic categories (or water/ice) is captured by the extra dimension. In this way, we calculate an area-weighted mean Mg+Ca concentration of the surface in each 0.5\degrees $\times$ 0.5\degrees pixel.
+The spatial distribution of lithologies is sourced from the Global Lithologic Map (GLiM) of \citet{Hartmann2012a}. The raw data takes the form of polygon vectors, where each polygon is assigned one of 16 lithologic categories. We first group these 16 categories into 6 broader categories (metamorphic, felsic, intermediate, mafic, carbonate, and siliciclastic sediment; Table \ref{tab:GLiM_to_GEOCLIM}). We then rasterize the polygon vectors to 0.1\degrees $\times$ 0.1\degrees resolution, where each pixel is assigned the lithologic category of the polygon that covers the greatest area in that pixel (i.e. the `mode lithology'; Fig. \ref{fig:world_lithology}). To improve the computing time of GEOCLIM, we decrease the resolution of the raster to 0.5\degrees $\times$ 0.5\degrees. To do so, a 3-dimensional 720 $\times$ 360 $\times$ 7 matrix is created, in which the fraction of each 0.5\degrees $\times$ 0.5\degrees pixel covered by each of the 6 lithologic categories (or water/ice) is captured by the extra dimension. In this way, we calculate an area-weighted mean Mg+Ca concentration of the surface in each 0.5\degrees $\times$ 0.5\degrees pixel.
+
+The Ca+Mg concentrations of felsic (1,521~mol/m$^{3}$), intermediate (4,759~mol/m$^{3}$), and mafic (10,317~mol/m$^{3}$) lithologies are assigned based on the mean of data compiled from EarthChem (\url{www.earthchem.org/portal}). For metamorphic and siliciclastic lithologies, we explore a range of feasible Ca+Mg concentrations during calibration of the silicate weathering component of GEOCLIM (\textit{GEOCLIM Calibration}).
 
 \section*{GEOCLIM Calibration}
 
@@ -298,13 +300,13 @@ We then compute spatially-resolved long-term \COtwo consumption (i.e. Ca+Mg flux
 \noindent
 $M_{i}$ is the modeled \COtwo consumption over watershed $i$, $O_{i}$ is the observed \COtwo consumption over watershed $i$, and $\overline{\log_{10}(O)}$ is the mean of the log of observed \COtwo consumption over all watersheds.
 
-The majority of the original 78,000 parameter combinations produce \COtwo consumption maps with poor fits to the measured watershed data (Fig. \ref{fig:W_vs_r2}). Given that the coefficient of determination ($r^{2}$) is calculated using equation \ref{eq:10} rather than fitting a linear model, many of the combinations associated with particularly poor fits result in negative $r^{2}$ values (Fig. \ref{fig:W_vs_r2}). However, given the right permutation of parameters, GEOCLIM produces \COtwo consumption maps that fit the measured watershed data reasonably well. We therefore eliminate all parameter combinations that produce a $r^{2}<0.4$, which leaves 3,339 unique parameter combinations (Figs. \ref{fig:W_vs_r2} and \ref{fig:r2_cross_plot}).
+The majority of the original 78,000 parameter combinations produce \COtwo consumption maps with poor fits to the measured watershed data (Fig. \ref{fig:W_vs_r2}). Given that the coefficient of determination ($r^{2}$) is calculated using Equation \ref{eq:10} rather than fitting a linear model, many of the combinations associated with particularly poor fits result in negative $r^{2}$ values (Fig. \ref{fig:W_vs_r2}). However, given the right permutation of parameters, GEOCLIM produces \COtwo consumption maps that fit the measured watershed data reasonably well. We therefore eliminate all parameter combinations that produce a $r^{2}<0.4$, which leaves 3,339 unique parameter combinations (Figs. \ref{fig:W_vs_r2} and \ref{fig:r2_cross_plot}).
 
 Global CO$_{2}$ consumption calculated from these 3,339 parameter combinations ranges from 2.7$\times10^{12}$~mol/yr to 7.1$\times10^{12}$~mol/yr, with a mean of 5.4$\times10^{12}$~mol/yr. These estimates fall within the range of those independently estimated in the literature for the present-day: the full range of estimates of the present-day global CO$_{2}$ emission rate compiled in \citet{Gerlach2011a} is 3.0--10.0$\times10^{12}$~mol/yr, with the preferred range of those estimates being 3.4--5.9$\times10^{12}$~mol/yr (Fig. \ref{fig:W_vs_r2}B).
 
 \section*{Climate Model}
 
-We use temperature and runoff fields from a subset of the GFDL CM2.0 experiments (\citealp{Delworth2006a, Delworth2006b}; available for download at \url{https://nomads.gfdl.noaa.gov/dods-data/gfdl_cm2_0/}) for the climate model component of GEOCLIM. These experiments were performed in order to explore the effect of various changes in forcing agents on climate since ca. 1860 at a 2.0\degrees $\times$ 2.5\degrees resolution. In the ``1860 control'' experiment, forcing agents representative of conditions ca. 1860 (including \COtwo, CH$_{4}$, N$_{2}$O, O$_{3}$, sulfates, carbon, dust, sea salt, solar irradiance, and the distribution of land cover types) are held constant for 500 years after reaching equilibrium. \pCOtwo in 1860 is assumed to be 286~ppm. In the ``+1\%/yr to 2$\times$'' experiment, initial conditions are taken from the ``1860 control'' experiment, then \pCOtwo is prescribed to increase from 286~ppm at a compounded rate of +1\% per year for 70 years, when \pCOtwo reaches double (572~ppm) of the initial value. \pCOtwo is then held constant until the end of the 280 year experiment. All non-\COtwo forcing agents are held constant. The ``+1\%/yr to 4$\times$'' experiment is identical to the ``+1\%/yr to 2$\times$'' experiment, except that \pCOtwo is prescribed to increase for 140 years, when \pCOtwo reaches quadruple (1144~ppm) of the initial value. \pCOtwo is then held constant for 160 years. We take the mean of the last 100 years of each of these three experiments (when \pCOtwo is being held constant at its final level) to obtain temperature and runoff fields for 286, 572, and 1144~ppm respectively. Temperature and runoff fields for any arbitrary \pCOtwo value between 286 and 1144~ppm is obtained by interpolating between the three modeled \pCOtwo levels.
+We use temperature and runoff fields from a subset of the GFDL CM2.0 experiments (\citealp{Delworth2006a, Delworth2006b}; available for download at \url{https://nomads.gfdl.noaa.gov/dods-data/gfdl_cm2_0/}) for the climate model component of GEOCLIM. These experiments were performed in order to explore the effect of various changes in forcing agents on climate since ca. 1860 at 2.0\degrees $\times$ 2.5\degrees resolution. In the ``1860 control'' experiment, forcing agents representative of conditions ca. 1860 (including \COtwo, CH$_{4}$, N$_{2}$O, O$_{3}$, sulfates, carbon, dust, sea salt, solar irradiance, and the distribution of land cover types) are held constant for 500 years after reaching equilibrium. \pCOtwo in 1860 is assumed to be 286~ppm. In the ``+1\%/yr to 2$\times$'' experiment, initial conditions are taken from the ``1860 control'' experiment, then \pCOtwo is prescribed to increase from 286~ppm at a compounded rate of +1\% per year for 70 years, when \pCOtwo reaches double (572~ppm) of the initial value. \pCOtwo is then held constant until the end of the 280 year experiment. All non-\COtwo forcing agents are held constant. The ``+1\%/yr to 4$\times$'' experiment is identical to the ``+1\%/yr to 2$\times$'' experiment, except that \pCOtwo is prescribed to increase for 140 years, when \pCOtwo reaches quadruple (1144~ppm) of the initial value. \pCOtwo is then held constant for 160 years. We take the mean of the last 100 years of each of these three experiments (when \pCOtwo is being held constant at its final level) to obtain temperature and runoff fields for 286, 572, and 1144~ppm respectively. Temperature and runoff fields for any arbitrary \pCOtwo value between 286 and 1144~ppm are obtained by linearly interpolating between the three modeled \pCOtwo levels.
 
 \section*{Indonesia and New Guinea Scenarios}
 
@@ -322,9 +324,9 @@ We use temperature and runoff fields from a subset of the GFDL CM2.0 experiments
     \label{fig:scenario_pCO2_all}
 \end{figure}
 
-We use geological data to quantify the changes in the area of I\&NG over the past 20~m.y (described in detail in \textit{Paleoshoreline Reconstruction and Geological Synthesis}). To generate the lithologic map used in the ``removed I\&NG'' scenario (Fig. \ref{fig:ING_fracs}), we remove all land associated with arc-continent collision in I\&NG. To generate the lithologic map used in the ``reduced I\&NG + Sunda Shelf'' scenarios (Fig. \ref{fig:ING_fracs}), we take the estimated paleoshorelines of I\&NG for 15, 10, and 5~Ma, then remove all land that falls outside of these bounds. The slope and lithologic classification of each pixel is identical to that of the present day, provided that these pixels fall within the estimated paleoshorelines of I\&NG for their respective time slice. We then add land that is not exposed today (i.e. the Sunda Shelf). However, the assignment of lithology, runoff, and slope for pixels on the Sunda Shelf is not trivial, given that the shelf is not currently exposed. As discussed in \textit{Paleoshoreline Reconstruction and Geological Synthesis}, the Sunda Shelf is a flat-lying, relatively stable platform of continental crust. Basement highs between Malaysia/Sumatra and Borneo are typically granitic and bounded by basins dominated by shallow marine clastic fill. However, basement highs are less common in the Gulf of Thailand. We therefore assign all pixels of the Sunda Shelf to be 50\% felsic and 50\% sediment, except in the Gulf of Thailand where pixels are assigned to be 100\% sediment. For the slope, we take the mean slope value (0.0038~m/m) of relatively flat land on eastern Sumatra, and assign this value to all pixels of the Sunda Shelf.  For the runoff, we linearly interpolate along latitude bands between present-day land pixels to obtain runoff values for the presently-submerged Sunda Shelf. This approach preserves large N-S variation in runoff associated with the large-scale Hadley circulation and therefore should be reasonable to first-order, although it does not accurately capture the smaller-scale interactions between land and ocean/atmosphere circulation.
+We use geological data to quantify the changes in the area of I\&NG over the past 20~m.y. (described in detail in \textit{Paleoshoreline Reconstruction and Geological Synthesis}). To generate the lithologic map used in the ``removed I\&NG'' scenario (Fig. \ref{fig:ING_fracs}), we remove all land associated with arc-continent collision in I\&NG. To generate the lithologic map used in the ``reduced I\&NG + Sunda Shelf'' scenarios (Fig. \ref{fig:ING_fracs}), we take the estimated paleoshorelines of I\&NG for 15, 10, and 5~Ma, then remove all land that falls outside of these bounds. The slope and lithologic classification of each pixel is identical to that of the present day, provided that these pixels fall within the estimated paleoshorelines of I\&NG for their respective time slice. We then add land that is not exposed today (i.e. the Sunda Shelf). However, the assignment of lithology, runoff, and slope for pixels on the Sunda Shelf is not trivial, given that the shelf is not currently exposed. As discussed in \textit{Paleoshoreline Reconstruction and Geological Synthesis}, the Sunda Shelf is a flat-lying, relatively stable platform of continental crust. Islands between Malaysia/Sumatra and Borneo are composed of granite and are surrounded by shallow marine siliciclastic sediments \citep{Darmadi2007a, Hall2009a, Hall2013b}. However, basement highs do not appear in the Gulf of Thailand, and seismic and drill core data suggest siliciclastic fluvial systems draining out toward the South China Sea when the shelf was exposed \citep{Darmadi2007a}. We therefore assign pixels of the Sunda Shelf between Malaysia/Sumatra and Borneo to be 50\% felsic and 50\% sediment, and pixels further to the north to be 100\% sediment. For the slope, we take the mean slope value (0.0038~m/m) of relatively flat land on eastern Sumatra, and assign this value to all pixels of the Sunda Shelf.  For the runoff, we linearly interpolate along latitude bands between present-day land pixels to obtain runoff values for the presently-submerged Sunda Shelf. This approach preserves large N-S variation in runoff associated with the large-scale Hadley circulation and therefore should be reasonable to first-order, although it does not accurately capture the smaller-scale interactions between land and ocean/atmosphere circulation.
 
-To explore the sensitivity of our results to the inclusion of the Sunda Shelf, we also tested ``reduced I\&NG'' scenarios for 15, 10, and 5~Ma, which are identical to that of the ``reduced I\&NG + Sunda Shelf'' scenarios without the addition of the Sunda Shelf. We find that the estimated steady state \pCOtwo's for the ``reduced I\&NG'' scenarios are only marginally higher than those of the ``reduced I\&NG + Sunda Shelf'' scenarios (Fig. \ref{fig:scenario_pCO2_all}), suggesting that our results are largely insensitive to the inclusion of the Sunda Shelf. This insensitivity can be attributed to the low Ca+Mg concentrations of felsic and sediment lithologies in conjunction with the low slope values distributed across the shelf.
+To explore the sensitivity of our results to the inclusion of the Sunda Shelf, we also tested ``reduced I\&NG'' scenarios for 15, 10, and 5~Ma, which are identical to that of the ``reduced I\&NG + Sunda Shelf'' scenarios without the addition of the Sunda Shelf. We find that the estimated steady state \pCOtwo's for the ``reduced I\&NG'' scenarios are only marginally higher than those of the ``reduced I\&NG + Sunda Shelf'' scenarios (Fig. \ref{fig:scenario_pCO2_all}), suggesting that our results are insensitive to the inclusion of the Sunda Shelf. This insensitivity can be attributed to the low Ca+Mg concentrations of felsic and sediment lithologies in conjunction with the low relief across the shelf.
 
 The decrease in \pCOtwo that we estimate associated with the emergence of I\&NG since 5~Ma ($\sim$120~ppm) is greater than that proposed in \citet{Molnar2015a} ($\sim$19~ppm). This 19~ppm value in \citet{Molnar2015a} is obtained from an equation that assumes a direct linear relationship between mean global temperature and changes in weathering-rate-weighted land area, scaled by a factor $\alpha$ that is intended to account for the influence of both runoff and temperature (Equation 3 in \citealp{Molnar2015a}). \pCOtwo is then estimated from $T$ using a simple energy balance equation. However, as discussed in the main text, as \COtwo sinks are removed and \pCOtwo rises, temperature increases and the hydrological cycle is invigorated, causing other weathering sinks to increase until a new steady-state is achieved at higher \pCOtwo. The linear relationship used in \citet{Molnar2015a} ignores these feedbacks in the global climate system.
 
@@ -339,11 +341,11 @@ Proxy-based \pCOtwo estimates for the past 20~m.y. are shown in Figure \ref{fig:
 
 \section*{Limitations and Future Directions}
 
-As with any modeling study, there are limitations with the approach. We consider one of the current limitations to be the climate model component of GEOCLIM that was used in this study (GFDL CM2.0) has a lower spatial resolution (2.0\degrees $\times$ 2.5\degrees) than what can be achieved with the latest climate models and computational resources. While this model is effective in capturing the large-scale climatology, using an updated climate model at higher resolution may result in runoff and temperature fields with different spatial distribution and sensitivities to elevation.
+As with any modeling study, there are limitations with the approach. We consider one of the current limitations to be the climate model component of GEOCLIM that was used in this study (GFDL CM2.0), which has a lower spatial resolution (2.0\degrees $\times$ 2.5\degrees) than what can be achieved with the latest climate models and computational resources. While this model is effective in capturing the large-scale climatology, using an updated climate model at higher resolution may result in runoff and temperature fields with different spatial distribution and sensitivities to elevation.
 
 Another limitation associated with using a modern-day climate model, is that in the scenarios with varying shorelines, we hold the slope and lithology to be the same as the present-day in each pixel. This means that while we are changing the amount of emergent land, we are not changing the latitudinal or longitudinal position and are keeping the slope of any emerged pixel the same. Given that similar distributions of lithology and slope are reasonable in the past and that latitudinal translation has been relatively minor (Fig. XXX), we consider this simplification to be reasonable to first-order. However, implementing high-resolution climate models with both varying shorelines and changes in paleogeographic position for these scenarios is a valuable future direction. Additionally, such modeling efforts could give insight into whether associated changes in ocean and atmosphere circulation would have significantly modulated precipitation in I\&NG.  Given that precipitation in this region is primarily driven by large-scale convective upwelling leading to high precipitation over both land and water, the current approach is a reasonable approximation for I\&NG. However, for paleogeographic change that would have very significantly modified precipitation over broad swathes of land such as growth of the Himalaya, this approach of using modern climate model results is not viable.
 
-Finally, although the silicate weathering component of GEOCLIM now implements lithology-dependent Ca+Mg concentration, our implementation does not include lithology-dependent kinetics of mineral dissolution. Relative to felsic lithologies, mafic lithologies contain a higher concentration of minerals with faster dissolution kinetics (e.g. plagioclase). However, Ca+Mg from both felsic and mafic lithologies is predominantly sourced from minerals with faster dissolution kinetics, and we therefore use the same chemical weathering formulation (including the same activation energy) across lithologies. We also do not include the effects of reverse weathering \citep{Michalopoulos1995a} as it is not clear how it should be parameterized and it is interpreted to be relatively minor flux in the Cenozoic \citep{Isson2018a}. Formation of authigenic clays that scales with Ca and Mg concentration of riverine waters could decrease the \COtwo consumption associated with silicate weathering although the overall trend seen in this study would remain.
+Finally, although the silicate weathering component of GEOCLIM now implements lithology-dependent Ca+Mg concentration, our implementation does not include lithology-dependent kinetics of mineral dissolution. Relative to felsic lithologies, mafic lithologies contain a higher concentration of minerals with faster dissolution kinetics (e.g. plagioclase). However, Ca+Mg from both felsic and mafic lithologies is predominantly sourced from minerals with faster dissolution kinetics, and we therefore use the same chemical weathering formulation (including the same activation energy) across lithologies. We also do not include the effects of reverse weathering \citep{Michalopoulos1995a} as it is not clear how it should be parameterized and it is interpreted to be a relatively minor flux in the Cenozoic \citep{Isson2018a}. Formation of authigenic clays that scales with Ca and Mg concentration of riverine waters could decrease the \COtwo consumption associated with silicate weathering although the overall trend seen in this study would remain.
 
 \section*{Paleoshoreline Reconstruction and Geological Synthesis}
 
